	Parameters can also be passed from the assembler to the python script, allowing the same python code to use different parameters, for example.
	!scriptpythonfile "TestPython.py" , <parameter 1> , <parameter n>
	!scriptpythoninline <parameter 1> , <parameter n> { }
	When the python code is called, it will already have the "acme" object imported, and a typle called acmeParameters which contains the parameters from the assembler. Strings can also be used.
	Python can use "acme.source("	inc .myzp+1\n	inc $0401")" to pass back assembly code fragments to the assembler.
	An usage example is included in: TestPython.a and TestPython.py


New CLI switch: "--pdb <filename>"


----------------------------------------------------------------------
Section:   New in release 1.00mp
----------------------------------------------------------------------

Any extra --lib paths will now be used when searching for top level source files from the command line.

!to !sl !svl !pdb and other POs that write files will not use the --lib paths and will only write relative to the current directory.


----------------------------------------------------------------------
Section:   New in release 0.99mp
----------------------------------------------------------------------

Improved PO: "!for" now supports forward references for labels, meaning that if a label is undefined or "not sure" then extra passes will be used to try to resolve the value.
To help give a hint where the new forward reference attempts were used, a new serious error was created "Value not defined. Even after several attempts."
	-v4 will output full debug for detection of changing calculation values to allow these to be efficiently traced


----------------------------------------------------------------------
Section:   New in release 0.96mp
----------------------------------------------------------------------

Improved PO: "!binary" now has "interleave" parameter.
