@@ -1,19 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LocalDebuggerCommandArguments>-v9 --pdb target\TestPython.pdb --labeldump target\TestPython.lbl TestPython.a</LocalDebuggerCommandArguments>
+    <LocalDebuggerCommandArguments>--lib ../C64/stdlib/ -v9 --pdb target\TestPython.pdb --labeldump target\TestPython.lbl TestPython.a</LocalDebuggerCommandArguments>
     <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LocalDebuggerCommandArguments>-v9 --pdb target\TestPython.pdb --labeldump target\TestPython.lbl TestPython.a</LocalDebuggerCommandArguments>
+    <LocalDebuggerCommandArguments>--lib ../C64/stdlib/ -v9 --pdb target\TestPython.pdb --labeldump target\TestPython.lbl TestPython.a</LocalDebuggerCommandArguments>
     <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LocalDebuggerCommandArguments>-v9 --pdb target\TestPython.pdb --labeldump target\TestPython.lbl TestPython.a</LocalDebuggerCommandArguments>
+    <LocalDebuggerCommandArguments>--lib ../C64/stdlib/ -v9 --pdb target\TestPython.pdb --labeldump target\TestPython.lbl TestPython.a</LocalDebuggerCommandArguments>
     <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LocalDebuggerCommandArguments>-v9 --pdb target\TestPython.pdb --labeldump target\TestPython.lbl TestPython.a</LocalDebuggerCommandArguments>
+    <LocalDebuggerCommandArguments>--lib ../C64/stdlib/ -v9 --pdb target\TestPython.pdb --labeldump target\TestPython.lbl TestPython.a</LocalDebuggerCommandArguments>
     <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
   </PropertyGroup>
 </Project>
